--- a/starters/Dockerfile
+++ b/starters/Dockerfile
@@ -6,11 +6,14 @@ COPY events/. /app/events
 COPY functions/. /app/functions
 COPY public/. /app/public
 COPY uploads/. /app/uploads
+COPY .git/. /app/.git
 COPY package.json /app
+COPY package-lock.json /app
 COPY bcms-config.js /app
 
+
+RUN apt update && apt install git -y
 RUN npm install
-RUN npm run build
 
 EXPOSE 1280
 
