--- a/starters/package.json
+++ b/starters/package.json
@@ -15,6 +15,22 @@
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "svelte-routing": "^1.4.2",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-replace": "^2.3.1",
+    "autoprefixer": "^9.7.4",
+    "crypto-js": "^3.3.0",
+    "node-sass": "^4.13.1",
+    "rollup": "^1.32.1",
+    "rollup-plugin-livereload": "^1.1.0",
+    "rollup-plugin-scss": "^2.1.0",
+    "rollup-plugin-svelte": "^5.0.1",
+    "rollup-plugin-terser": "^5.3.0",
+    "sirv": "^0.4.0",
+    "sirv-cli": "^0.4.4",
+    "svelte": "^3.20.1",
+    "svelte-preprocess": "^3.5.0"
   }
 }
